--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,22 @@
     <string name="boton_intertermedio">Intermedio</string>
     <string name="boton_dificil">Dificil</string>
 
+
+
+    <string name="uno">1</string>
+    <string name="dos">2</string>
+    <string name="tres">3</string>
+    <string name="cuatro">4</string>
+    <string name="cinco">5</string>
+    <string name="seis">6</string>
+    <string name="siete">7</string>
+    <string name="ocho">8</string>
+    <string name="nueve">9</string>
+    <string name="diez">10</string>
+    <string name="once">11</string>
+    <string name="doce">12</string>
+    <string name="trece">13</string>
+    <string name="catorce">14</string>
+    <string name="quince">15</string>
+
 </resources>
